färg på kontakt form

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#faf0ca">
+    <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Instarecept</title>
@@ -12,10 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
-    <link rel="stylesheet" href="startsida-image-links.css">
+  
     <link rel="stylesheet" href="contact.css">
 
     <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
@@ -158,9 +155,7 @@
 
 </header>
 
-    <a href="startsida2.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
-    </a>
+   
 
     <div class="top-space"></div>
     
