bytte ut plus minus knappar från generator till visa mer och mindre

--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
         <img src="images/kontaktaossrubrik.svg" alt="Text Image">
     </div>
 
-    <div class="contact-container">
+   <!-- <div class="contact-container">
         <h1></h1>
         <form id="contactForm">
             <label for="name">Namn:</label>
@@ -177,8 +177,8 @@
             <textarea id="message" name="message" required></textarea>
 
             <button type="submit">Skicka</button>
-        </form>
-    </div>
+        </form> 
+    </div> -->
 
     <footer id="footer-container"></footer>
 
