--- a/generator.html
+++ b/generator.html
@@ -100,7 +100,7 @@
         <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div> -->
 
         <div class="show-more-btn" data-target="mealtype" data-expanded="false">
-            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+            <img src="images/visa fler knappar/merknapp.svg" alt="Visa fler" class="show-more-image" />
         </div>
 
 
@@ -149,7 +149,7 @@
 
         <!-- Lägg till en "Visa fler"-knapp här -->
         <div class="show-more-btn" data-target="proteins" data-expanded="false">
-            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+            <img src="images/visa fler knappar/merknapp.svg" alt="Visa fler" class="show-more-image" />
         </div>
 
     </div>
@@ -223,7 +223,7 @@
 
         <!-- Lägg till en "Visa fler"-knapp här -->
         <div class="show-more-btn" data-target="countries" data-expanded="false">
-            <img src="images/plustecken-svart.svg" alt="Visa fler" class="show-more-image" />
+            <img src="images/visa fler knappar/merknapp.svg" alt="Visa fler" class="show-more-image" />
         </div>
 
     </div>
