--- a/matkreator.html
+++ b/matkreator.html
@@ -108,7 +108,9 @@
     <div id="pagination-controls"></div>
 
 
-  
+    <footer id="footer-container"></footer>
+
+    <script src="footer.js"></script>
 
     <script src="script-matkreator.js"></script>
 
