--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="input-button-container">
             <input type="text" id="searchInput" placeholder="Skriv 1 ingrediens och tryck Enter/Gå...">
             <button onclick="addTagFromButton()" class="add-button">
-                <img src="images/gaffelskedbild2.webp
+                <img src="images/plusteckengron.svg
                 " alt="Add" />
             </button> <!-- Ny knapp för att lägga till taggar -->
             <!-- <button onclick="performSearch()">Sök</button> -->
