--- a/matkreator.html
+++ b/matkreator.html
@@ -92,7 +92,7 @@
         <div class="input-button-container">
             <input type="text" id="searchInput" placeholder="Skriv matkreatörens namn och tryck enter...">
             <button onclick="addTagFromButton()" class="add-button">
-                <img src="images/knifeforksign.jpg
+                <img src="images/plusknapp3.svg
                 " alt="Add" />
             </button> <!-- Ny knapp för att lägga till taggar -->
             <!-- <button onclick="performSearch()">Sök</button> -->
