--- a/startsida2.html
+++ b/startsida2.html
@@ -73,10 +73,13 @@
 
     <div class="image-links">
         <a href="generator.html">
-            <img src="images/matgeneratorntrext5.svg" alt="Beskrivning av bild 1">
+            <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
         </a>
         <a href="index.html">
-            <img src="images/ingrediensassistenten-text5.svg" alt="Beskrivning av bild 2">
+            <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/matkreatorernaknapp.svg" alt="Beskrivning av bild 2">
         </a>
     </div>
 
