--- a/startsida2.html
+++ b/startsida2.html
@@ -78,7 +78,7 @@
         <a href="index.html">
             <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
         </a>
-        <a href="index.html">
+        <a href="matkreator.html">
             <img src="images/startsideknappar/matkreatorernaknapp.svg" alt="Beskrivning av bild 2">
         </a>
     </div>
