--- a/startsida2.html
+++ b/startsida2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#faf0ca">
+    <meta name="theme-color" content="#cfff00">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Din Startsida Titel</title>
