byter browser färg till grön på samtilga sidor statiskt

--- a/matkreator.html
+++ b/matkreator.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
-    <meta name="theme-color" content="#faf0ca">
+    <meta name="theme-color" content="#cfff00">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     
