uppdaterar och omdirigerar läs mer och om oss sida

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     </header>
 
-    <!-- <a href="startsida2.html" class="logo-link">
+     <a href="startsida2.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
-    </a> -->
+    </a> 
 
 
 
@@ -58,7 +58,7 @@
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
     </div> -->
-    <div class="top-space"></div>
+    <!-- <div class="top-space"></div> -->
 
     <!-- Ny bild för text under logotypen -->
     <div class="text-image">
@@ -119,9 +119,9 @@
         <p>Det du sökte på fanns inte, testa igen.</p>
     </div>
 
-    <footer id="footer-container"></footer>
+    
 
-    <script src="footer.js"></script>
+    
 
     <script src="script-ingrediensassistenten.js"></script>
 
@@ -130,7 +130,9 @@
 
     <script async src="//www.instagram.com/embed.js"></script>
 
+    <footer id="footer-container"></footer>
 
+    <script src="footer.js"></script>
 
 
 
