--- a/startsida2.html
+++ b/startsida2.html
@@ -77,7 +77,7 @@
         <h1>Välkommen till Instarecept!</h1>
         <p>Upptäck och inspireras av Instagrams bästa recept. Använd <strong>Mat-Generatorn</strong> för kategoriindelad sökning eller <strong>Ingrediens-Assistenten</strong> för att utforska baserat på ingredienser.</p>
         <p>Upphovsrätt till recept och bilder innehas av originalskaparna. För fullständiga recept, besök deras Instagram-profiler genom att klicka på inläggen.</p>
-        <a href="#" class="learn-more">Läs mer...</a>
+        <a href="omoss.html" class="learn-more">Läs mer...</a>
     </div>
 
 
