--- a/artiklar/koksredskap-mainpage.html
+++ b/artiklar/koksredskap-mainpage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#faf0ca">
+    <meta name="theme-color" content="#cfff00">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Köksredskap | Din Webbplats</title>
 
@@ -18,7 +18,7 @@
 
     <!-- Fler länkar till stilar och skript kan läggas till här -->
 
-    <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
+    <link rel="icon" type="image/png" href="../images/logos/instareceptbaragaffellogo.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 <body>
     <header class="site-header">
         <a href="/startsida2.html" class="logo-link">
-            <img src="/images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
+            <img src="/images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
 
