--- a/startsida2.html
+++ b/startsida2.html
@@ -59,6 +59,9 @@
 
  <!-- <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image"> -->
 
+
+ <div class="space"></div>
+
  <div class="image-links">
     <a href="generator.html">
         <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
@@ -73,15 +76,21 @@
 
 <!-- <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider"> -->
 
-    <div class="welcome-text">
+   <!--  <div class="welcome-text">
         <h1>Välkommen till Instarecept!</h1>
         <p>Upptäck och inspireras av Instagrams bästa recept. Använd <strong>Mat-Generatorn</strong> för kategoriindelad sökning eller <strong>Ingrediens-Assistenten</strong> för att utforska baserat på ingredienser.</p>
         <p>Upphovsrätt till recept och bilder innehas av originalskaparna. För fullständiga recept, besök deras Instagram-profiler genom att klicka på inläggen.</p>
         <a href="omoss.html" class="learn-more">Läs mer...</a>
+    </div> -->
+
+
+    <div class="welcome-text">
+        <h1>Välkommen till Instarecept.se</h1>
+        <p> – din smarta genväg till de bästa recepten från Instagram! 🍽️✨ Vi samlar och organiserar populära maträtter från sociala medier, så att du enkelt kan hitta och inspireras av nya smaker. Använd vår <strong>Mat-Generator</strong> för att filtrera recept efter kategori eller låt <strong>Ingrediens-Assistenten</strong> hjälpa dig att skapa magi med det du har hemma.</p>
+        <p>Upphovsrätt till recept och bilder innehas av originalskaparna. För fullständiga recept, besök deras Instagram-profiler genom att klicka på inläggen.</p>
+        <p> 📲 Upptäck. Inspireras. Laga mat. Välkommen till framtidens receptsida! 🚀👨‍🍳 </p>
+        <a href="omoss.html" class="learn-more">Läs mer...</a>
     </div>
-
-
-
 
    
 
@@ -93,7 +102,45 @@
         <img src="" alt=""> <!-- Bilden fylls också dynamiskt -->
         <p></p> <!-- Beskrivningen fylls också dynamiskt -->
     </div>
+<!--
+    <div class="image-links">
+        <a href="generator.html">
+            <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
+        </a>
+  
+    </div>
 
+    <div class="image-links">
+        <a href="generator.html">
+            <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
+        </a>
+  
+    </div>
+    <div class="image-links">
+        <a href="generator.html">
+            <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
+        </a>
+  
+    </div>
+    <div class="image-links">
+        <a href="generator.html">
+            <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
+        </a>
+  
+    </div>
+-->
     <footer id="footer-container"></footer>
 
     <script src="footer.js"></script>
