ny footer på startsidan och ny bild under 3 alternativen

--- a/startsida2.html
+++ b/startsida2.html
@@ -15,12 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 
-    
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="foodDays.css">
     <link rel="stylesheet" href="startsida-image-links.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer2.css">
+
 
 
     <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
@@ -45,7 +47,7 @@
 
     </header>
 
-   
+
 
 
 
@@ -57,26 +59,29 @@
         Din webbläsare stöder inte videouppspelning.
     </video>
 
- <!-- <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image"> -->
+    <!-- <img src="images/gordittval.svg" alt="Gör ditt val" class="regular-image"> -->
 
 
- <div class="space"></div>
+    <div class="space"></div>
 
- <div class="image-links">
-    <a href="generator.html">
-        <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
-    </a>
-    <a href="index.html">
-        <img src="images/startsideknappar/ingrediensassistentenknapp.svg" alt="Beskrivning av bild 2">
-    </a>
-    <a href="matkreator.html">
-        <img src="images/startsideknappar/matkreatorernaknapp.svg" alt="Beskrivning av bild 2">
-    </a>
-</div>
+    <div class="image-links">
+        <a href="generator.html">
+            <img src="images/startsideknappar/matgeneratornknapp2.svg" alt="Beskrivning av bild 1">
+        </a>
+        <a href="index.html">
+            <img src="images/startsideknappar/ingrediensassistentenknapp2.svg" alt="Beskrivning av bild 2">
+        </a>
+        <a href="matkreator.html">
+            <img src="images/startsideknappar/matkreatorernaknapp2.svg" alt="Beskrivning av bild 2">
+        </a>
+    </div>
 
-<!-- <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider"> -->
+    <img class="full-width-image" src="images/valjenav3valovan.svg" alt="Beskrivande text">
 
-   <!--  <div class="welcome-text">
+
+    <!-- <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider"> -->
+
+    <!--  <div class="welcome-text">
         <h1>Välkommen till Instarecept!</h1>
         <p>Upptäck och inspireras av Instagrams bästa recept. Använd <strong>Mat-Generatorn</strong> för kategoriindelad sökning eller <strong>Ingrediens-Assistenten</strong> för att utforska baserat på ingredienser.</p>
         <p>Upphovsrätt till recept och bilder innehas av originalskaparna. För fullständiga recept, besök deras Instagram-profiler genom att klicka på inläggen.</p>
@@ -92,7 +97,7 @@
         <a href="omoss.html" class="learn-more">Läs mer...</a>
     </div>
 
-   
+
 
     <!-- Plats för matdagarnas innehåll -->
     <div id="foodDayContainer">
@@ -102,7 +107,7 @@
         <img src="" alt=""> <!-- Bilden fylls också dynamiskt -->
         <p></p> <!-- Beskrivningen fylls också dynamiskt -->
     </div>
-<!--
+    <!--
     <div class="image-links">
         <a href="generator.html">
             <img src="images/startsideknappar/matgeneratornknapp.svg" alt="Beskrivning av bild 1">
@@ -141,9 +146,14 @@
   
     </div>
 -->
-    <footer id="footer-container"></footer>
+    <!--  <footer id="footer-container"></footer>
 
-    <script src="footer.js"></script>
+    <script src="footer.js"></script> -->
+
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
+
+    <script src="footer2.js"></script>
+
 
     <script src="loadNavbar.js"></script>
 
