ändrar valjenav3val för att den inte ska överlappas

--- a/startsida2.html
+++ b/startsida2.html
@@ -79,7 +79,7 @@
     <img class="full-width-image" src="images/valjenav3valovan.svg" alt="Beskrivande text">
 
 
-    <!-- <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider"> -->
+    <img src="images/divider/raklinje.svg" alt="Dekorativ divider" class="image-divider"> 
 
     <!--  <div class="welcome-text">
         <h1>Välkommen till Instarecept!</h1>
