--- a/startsida2.html
+++ b/startsida2.html
@@ -91,7 +91,7 @@
 
     <div class="welcome-text">
         <h1>Välkommen till Instarecept.se</h1>
-        <p> – din smarta genväg till de bästa recepten från Instagram! 🍽️✨ Vi samlar och organiserar populära maträtter från sociala medier, så att du enkelt kan hitta och inspireras av nya smaker. Använd vår <strong>Mat-Generator</strong> för att filtrera recept efter kategori eller låt <strong>Ingrediens-Assistenten</strong> hjälpa dig att skapa magi med det du har hemma.</p>
+        <p> – din smarta genväg till de bästa recepten från Instagram! 🍽️✨ Vi samlar och organiserar populära maträtter från instagram så att du enkelt kan hitta och inspireras av nya smaker. Använd vår <strong>Mat-Generator</strong> för att filtrera recept efter kategori eller låt <strong>Ingrediens-Assistenten</strong> hjälpa dig att skapa magi med det du har hemma.</p>
         <p>Upphovsrätt till recept och bilder innehas av originalskaparna. För fullständiga recept, besök deras Instagram-profiler genom att klicka på inläggen.</p>
         <p> 📲 Upptäck. Inspireras. Laga mat. Välkommen till framtidens receptsida! 🚀👨‍🍳 </p>
         <a href="omoss.html" class="learn-more">Läs mer...</a>
