ny footer implemetnerad över alla sidor

--- a/artiklar/koksredskap-mainpage.html
+++ b/artiklar/koksredskap-mainpage.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../style2.css">
     <link rel="stylesheet" href="koksredskap.css">
     <link rel="stylesheet" href="../../main.css">
+    <link rel="stylesheet" href="../footer2.css">
      <!-- Ny CSS-fil för 
         köksredskapssidan -->
 
