--- a/matkreator.html
+++ b/matkreator.html
@@ -17,6 +17,7 @@
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer2.css">
     <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
 </head>
 
