--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,22 @@
     <style>
         /* Justera textstorlek och radavstånd inom menyval */
         .nav__link .nav__text {
-            font-size: 25px; /* Justera textstorleken här */
-            line-height: 1; /* Minska radavståndet inom varje menyval */
+            font-size: 25px;
+            /* Justera textstorleken här */
+            line-height: 1;
+            /* Minska radavståndet inom varje menyval */
         }
 
         /* Justera avståndet mellan menyval */
         .nav__item {
-            margin-bottom: 0px; /* Ta bort avståndet mellan menyvalen */
+            margin-bottom: 0px;
+            /* Ta bort avståndet mellan menyvalen */
         }
 
         /* Minska inneravståndet inuti länkarna (vertikalt) */
         .nav__link {
-            padding: 5px 0; /* Justera avståndet inuti länkarna */
+            padding: 5px 0;
+            /* Justera avståndet inuti länkarna */
         }
     </style>
 </head>
@@ -51,7 +56,7 @@
                     <span class="nav__text">Matkreatörer</span>
                 </a>
             </li>
-            <li class="nav__item">
+            <!-- <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">Artiklar</span>
                 </a>
@@ -69,25 +74,12 @@
                         </a>
                     </li>
                 </ul>
-            </li>
+            </li> -->
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
-                    <span class="nav__text">Om</span>
+                    <span class="nav__text">Om oss</span>
                 </a>
-                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
-                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
-                <ul class="nav__list-child">
-                    <li class="nav__item">
-                        <a href="#hoi" class="nav__link">
-                            <span class="nav__text">Om oss</span>
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#hoi" class="nav__link">
-                            <span class="nav__text">Tipsa Oss</span>
-                        </a>
-                    </li>
-                </ul>
+
             </li>
             <li class="nav__item">
                 <a href="contact.html" class="nav__link">
@@ -97,4 +89,5 @@
         </ul>
     </nav>
 </body>
+
 </html>
