--- a/artiklar/kopavstekpanna.html
+++ b/artiklar/kopavstekpanna.html
@@ -11,6 +11,7 @@
    
     <link rel="stylesheet" href="../koksredskapartikel.css">
     <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="footer2.css">
     <link rel="icon" type="image/png" href="../../images/sidfliklogo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
