--- a/omoss.html
+++ b/omoss.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer2.css">
     
     <link rel="icon" href="images/logos/instareceptbaragaffellogo.svg" type="image/png">
     <title>Om Mig</title>
