--- a/contact.html
+++ b/contact.html
@@ -187,9 +187,9 @@
         </form> 
     </div> -->
 
-    <footer id="footer-container"></footer>
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
 
-    <script src="/footer.js"></script>
+    <script src="footer2.js"></script>
 
     <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
