--- a/matkreator.html
+++ b/matkreator.html
@@ -121,9 +121,9 @@
     <script async src="//www.instagram.com/embed.js"></script>
 
 
-    <footer id="footer-container"></footer>
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
 
-    <script src="footer.js"></script>
+    <script src="footer2.js"></script>
 
     
 
