--- a/omoss.html
+++ b/omoss.html
@@ -28,9 +28,9 @@
         </section>
     </main>
 
-    <footer id="footer-container"></footer>
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
 
-    <script src="/footer.js"></script>
+    <script src="footer2.js"></script>
 
     <script src="loadNavbar.js"></script>
 </body>
