--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -131,14 +131,10 @@
 
 
     </div>
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
 
-    <div class="footer-banner">
-        <p class="copyright">&copy; 2024. All rights reserved.</p>
-        <div class="footer-links">
-            <a href="omoss.html">Om</a>
-            <a href="tipsaoss.html">Tipsa</a>
-        </div>
-    </div>
+    <script src="footer2.js"></script>
+ 
 </body>
 
 </html>
