--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer2.css">
     <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
 </head>
 
@@ -121,18 +122,18 @@
 
     
 
-    
+    <div id="footer-container"></div> <!-- Här laddas footern in -->
+
+    <script src="footer2.js"></script>
 
     <script src="script-ingrediensassistenten.js"></script>
 
     <script src="loadNavbar.js"></script>
 
 
-    <script async src="//www.instagram.com/embed.js"></script>
+   
 
-    <footer id="footer-container"></footer>
-
-    <script src="footer.js"></script>
+   
 
 
 
