--- a/footer2.html
+++ b/footer2.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="footer-links">
-            <a href="om-oss.html">Om oss</a>
+            <a href="omoss.html">Om oss</a>
             <a href="kontakt.html">Kontakt</a>
             <a href="integritetspolicy.html">Integritetspolicy</a>
             <a href="cookies.html">Cookies</a>
