--- a/omoss.html
+++ b/omoss.html
@@ -21,10 +21,11 @@
 
     
     <main>
+       
         <section class="about-me">
-            <h1>Om Oss</h1>
-            <p>Välkommen! Mitt namn är [Ditt Namn], och jag är en passionerad [din profession eller hobby]. På den här sidan delar jag med mig av mina erfarenheter, projekt och de äventyr jag stöter på i min yrkesmässiga och personliga utveckling.</p>
-            <p>Utforska sidan för att veta mer om mig och vad jag gör!</p>
+            <h1 class="space-above">Om oss.</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo in nam ab magni. Asperiores excepturi dolores officiis consequuntur esse? Placeat, quod totam? Consequuntur mollitia hic voluptas provident, tenetur expedita et!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam amet sint harum quo placeat tempore pariatur architecto exceptu</p>
         </section>
     </main>
 
