löste problem med sökresultat inte visade sig

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="footer2.css">
+  
     <link rel="icon" type="image/png" href="images/logos/instareceptbaragaffellogo.svg">
 </head>
 
@@ -125,6 +126,8 @@
     <div id="footer-container"></div> <!-- Här laddas footern in -->
 
     <script src="footer2.js"></script>
+
+    <script async src="//www.instagram.com/embed.js"></script>
 
     <script src="script-ingrediensassistenten.js"></script>
 
