--- a/footer2.html
+++ b/footer2.html
@@ -6,7 +6,7 @@
 
         <div class="footer-links">
             <a href="omoss.html">Om oss</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a href="contact.html">Kontakt</a>
             <a href="integritetspolicy.html">Integritetspolicy</a>
             <a href="cookies.html">Cookies</a>
         </div>
