--- a/integritetspolicy.html
+++ b/integritetspolicy.html
@@ -21,7 +21,7 @@
     <main>
         <section class="privacy-policy">
             <h1>Integritetspolicy</h1>
-            <p><strong>Senast uppdaterad:</strong> [Dagens datum]</p>
+            <p><strong>Senast uppdaterad:</strong> 29/1 2025</p>
     
             <h2>1. Introduktion</h2>
             <p>Välkommen till <strong>Instarecept.se</strong>. Vi värnar om din integritet och strävar efter att skydda dina personuppgifter på bästa sätt. Denna integritetspolicy förklarar vilka uppgifter vi samlar in, varför vi gör det och hur du kan kontrollera din information.</p>
