bytte namn på indexfilen som tidigare innehöll ingrediensassistenten till namnet ingrediensassistenten.html och ändrade namn på startsida2.html till index.html överallt

--- a/artiklar/frukost-halsa.html
+++ b/artiklar/frukost-halsa.html
@@ -21,7 +21,7 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="startsida2.html" class="nav__link">
+                <a href="../index.html" class="nav__link">
                     <span class="nav__text">
                         Startsida
                     </span>
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li class="nav__item">
-                <a href="index.html" class="nav__link">
+                <a href="../ingrediensassistenten.html" class="nav__link">
                     <span class="nav__text">
                         Ingrediens-Assistenten
                     </span>
