--- a/artiklar/koksredskap-mainpage.html
+++ b/artiklar/koksredskap-mainpage.html
@@ -29,7 +29,7 @@
 
 <body>
     <header class="site-header">
-        <a href="/startsida2.html" class="logo-link">
+        <a href="/index.html" class="logo-link">
             <img src="/images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
