--- a/artiklar/kopavstekpanna.html
+++ b/artiklar/kopavstekpanna.html
@@ -23,7 +23,7 @@
   
 
     <header class="site-header">
-        <a href="/startsida2.html" class="logo-link">
+        <a href="/index.html" class="logo-link">
             <img src="/images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
         </a>
 
