--- a/generator.html
+++ b/generator.html
@@ -30,7 +30,7 @@
     <div id="overlay" hidden></div>
 
     <header class="site-header">
-        <a href="startsida2.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
 
@@ -38,7 +38,7 @@
 
     </header>
 
-   <!-- <a href="startsida2.html" class="logo-link">
+   <!-- <a href="index.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>  -->
 
