--- a/artiklar/halsa.html
+++ b/artiklar/halsa.html
@@ -30,7 +30,7 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="../../startsida2.html" class="nav__link">
+                <a href="../index.html" class="nav__link">
                     <span class="nav__text">
                         Startsida
                     </span>
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li class="nav__item">
-                <a href="../../index.html" class="nav__link">
+                <a href="../ingrediensassistenten.html" class="nav__link">
                     <span class="nav__text">
                         Ingrediens-Assistenten
                     </span>
@@ -112,7 +112,7 @@
         </ul>
     </nav>
 
-    <a href="../../startsida2.html" class="logo-link">
+    <a href="../index.html" class="logo-link">
         <img src="../../images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
