--- a/integritetspolicy.html
+++ b/integritetspolicy.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="site-header">
-        <a href="startsida2.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="images/logos/instareceptlogga7.svg" alt="Logga" />
         </a>
         <div id="navbar-container"></div>
