--- a/navbar.html
+++ b/navbar.html
@@ -37,7 +37,7 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
-                <a href="startsida2.html" class="nav__link">
+                <a href="index.html" class="nav__link">
                     <span class="nav__text">Startsida</span>
                 </a>
             </li>
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li class="nav__item">
-                <a href="index.html" class="nav__link">
+                <a href="ingrediensassistenten.html" class="nav__link">
                     <span class="nav__text">Ingrediens-Assistenten</span>
                 </a>
             </li>
