--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -118,7 +118,7 @@
 </head>
 
 <body>
-    <a href="index.html" class="logo-link">
+    <a href="ingrediensassistenten.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga">
     </a>
 
