ändrar font-weight tjocklek för hela sidan

--- a/navbar.html
+++ b/navbar.html
@@ -26,6 +26,17 @@
             padding: 5px 0;
             /* Justera avståndet inuti länkarna */
         }
+
+        .nav {
+            font-weight: 700;
+            /* Återställ navigeringens text till tjock */
+        }
+
+        .nav a,
+        .nav__link {
+            font-weight: 700;
+            /* Gör länkarna i navigationen tjocka */
+        }
     </style>
 </head>
 
@@ -76,7 +87,7 @@
                 </ul>
             </li> -->
             <li class="nav__item">
-                <a href="#hoi" class="nav__link">
+                <a href="omoss.html" class="nav__link">
                     <span class="nav__text">Om oss</span>
                 </a>
 
