--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
     <div class="image-links">
         <a href="generator.html">
-            <img src="images/startsideknappar/matgeneratornknapp2.svg" alt="Beskrivning av bild 1">
+            <img src="images/startsideknappar/matgeneratornknapp3.png" alt="Beskrivning av bild 1">
         </a>
         <a href="ingrediensassistenten.html">
-            <img src="images/startsideknappar/ingrediensassistentenknapp2.svg" alt="Beskrivning av bild 2">
+            <img src="images/startsideknappar/ingrediensassistentenknapp3.png" alt="Beskrivning av bild 2">
         </a>
         <a href="matkreator.html">
-            <img src="images/startsideknappar/matkreatorernaknapp2.svg" alt="Beskrivning av bild 2">
+            <img src="images/startsideknappar/matkreatorernaknapp3.png" alt="Beskrivning av bild 2">
         </a>
     </div>
 
