layout optimerad för dator för alla webbsidor i footern

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     
     <main>
        
-        <section class="about-me">
+        <section class="contact">
             <h1 class="space-above">Kontakta oss</h1>
             <p>Vi vill gärna höra dina synpunkter och åsikter!</p>
             <p>Hör av dig till oss på kontakt.instarecept@gmail.com</p>
