--- a/omoss.html
+++ b/omoss.html
@@ -45,5 +45,8 @@
     <script src="footer2.js"></script>
 
     <script src="loadNavbar.js"></script>
+
+    <script src="theme.js"></script>
+
 </body>
 </html>
