--- a/generator.html
+++ b/generator.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#cfff00">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Din Startsida Titel</title>
@@ -263,6 +262,9 @@
     <script src="loadNavbar.js"></script>
 
     <script async src="//www.instagram.com/embed.js"></script>
+
+    <script src="theme.js"></script>
+
 
 </body>
 
