--- a/integritetspolicy.html
+++ b/integritetspolicy.html
@@ -71,5 +71,8 @@
 
     <script src="footer2.js"></script>
     <script src="loadNavbar.js"></script>
+
+    <script src="theme.js"></script>
+
 </body>
 </html>
