--- a/artiklar/koksredskap-mainpage.html
+++ b/artiklar/koksredskap-mainpage.html
@@ -81,6 +81,8 @@
     <script src="footer.js"></script>
 
     <script src="loadNavbar.js"></script>
+
+    <script src="theme.js"></script>
 </body>
 
 </html>
