--- a/cookies.html
+++ b/cookies.html
@@ -50,5 +50,7 @@
 
     <script src="footer2.js"></script>
     <script src="loadNavbar.js"></script>
+
+    <script src="theme.js"></script>
 </body>
 </html>
