--- a/contact.html
+++ b/contact.html
@@ -43,5 +43,7 @@
     <script src="footer2.js"></script>
 
     <script src="loadNavbar.js"></script>
+
+    <script src="theme.js"></script>
 </body>
 </html>
