lagt till ett helt artikel system

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
 
     <script src="footer.js"></script> -->
 
+    <section id="latest-articles">
+        <h2>Senaste Artiklar</h2>
+        <div id="latest-articles-container"></div>
+    </section>
+    
+    <script src="latest-articles.js"></script>
+    
+
     <div id="footer-container"></div> <!-- Här laddas footern in -->
 
     <script src="footer2.js"></script>
