--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 
     <script src="footer.js"></script> -->
 
-    <section id="latest-articles">
+    <!-- <section id="latest-articles">
         <h2>Senaste Artiklar</h2>
         <div id="latest-articles-container"></div>
     </section>
     
-    <script src="latest-articles.js"></script>
+    <script src="latest-articles.js"></script> -->
     
 
     <div id="footer-container"></div> <!-- Här laddas footern in -->
