fortsättning som tidigare av artikelsystemet

--- a/artikel.html
+++ b/artikel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="footer2.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
-    <title>Artikel</title>
+    <title>Artikel.</title>
 </head>
 <body>
     <header class="site-header">
