--- a/artiklar.html
+++ b/artiklar.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="footer2.css">
     
     <link rel="icon" href="images/logos/instareceptbaragaffellogo.svg" type="image/png">
-    <title>Artiklar</title>
+    <title>Artiklar.</title>
 </head>
 <body>
     <header class="site-header">
