flera ändringar, flik för text på matgeneratorsida visa mer mindre

--- a/generator.html
+++ b/generator.html
@@ -52,10 +52,19 @@
         <img src="images/matgeneratorntext2.svg" alt="Text Image">
     </div>
 
-    <div class="welcome-text">
-        <h1></h1>
-        <p>Välj 1 eller flera Mattyper, en eller flera proteinkällor och en eller flera länder/världsdelar. Klicka sedan på <strong>sök</strong> för att få fram recept som stämmer med dina val. <strong>Om du t.ex. väljer</strong> soppa och förrätt och sedan fisk och vegetariskt så kommer resultaten kanske att vara en fisksoppa och en vegetarisk förätt.</p>
+    <div class="toggle-text">
+        <p id="intro-text">
+            Välj 1 eller flera Mattyper, en eller flera proteinkällor och en eller flera länder/världsdelar.
+            <span id="more-text" class="hidden">
+                Klicka sedan på <strong>sök</strong> för att få fram recept som stämmer med dina val.
+                <strong>Om du t.ex. väljer</strong> soppa och förrätt och sedan fisk och vegetariskt så kommer resultaten
+                kanske att vara en fisksoppa och en vegetarisk förrätt.
+            </span>
+        </p>
+        <a id="read-more" href="javascript:void(0);">Läs mer</a>
+        
     </div>
+    
 
     <div class="category-header">
         <img src="images/rubrik bilder/vad.svg" alt="Vad" class="category-image" />
