--- a/integritetspolicy.html
+++ b/integritetspolicy.html
@@ -20,7 +20,7 @@
     
     <main>
         <section class="privacy-policy">
-            <h1>Integritetspolicy</h1>
+            <h1 class="space-above">Integritetspolicy</h1>
             <p><strong>Senast uppdaterad:</strong> 29/1 2025</p>
     
             <h2>1. Introduktion</h2>
