--- a/ingrediensassistenten.html
+++ b/ingrediensassistenten.html
@@ -99,7 +99,7 @@
 
         <!-- Sökfält och knappar -->
         <div class="input-button-container">
-            <input type="text" id="searchInput" placeholder="Skriv 1 ingrediens och tryck Enter/Gå...">
+            <input type="text" id="searchInput" placeholder="Ange ingrediens">
             <button onclick="addTagFromButton()" class="add-button">
                 <img src="images/plusknapp3.svg
                 " alt="Add" />
