--- a/matkreator.html
+++ b/matkreator.html
@@ -113,7 +113,11 @@
 
     <div id="pagination-controls"></div>
 
-
+    <div id="no-results-message" style="display: none; text-align: center;">
+        <img src="images/gif/aggtimer.gif" alt="Inga resultat hittades" style="max-width: 300px; height: auto;">
+        <p>Det du sökte på fanns inte, testa igen.</p>
+    </div>
+    
     
 
     <script src="script-matkreator.js"></script>
